# api-biblioteca

./: alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 5c1facd7a0cb_atualizacao_grupopolitica_e_permissao.py  857ee0b93369_grupopolitica_e_permissao.py  a19aa8383643_criando_todas_as_tabelas.py
app/: database.py  main.py
app/models/: book.py  models.py  permission.py  policy_group.py  policy_group_permission.py  user.py
app/routers/: auth.py  books.py  files.py  loans.py  permissions.py  policy_group.py  policy_group_permissions.py  users.py
app/schemas/: book.py  permission.py  policy_group_permission.py  user.py
app/services/: scheduler.py  security.py
app/services/celery/: celery_app.py  notifications.py
app/services/scripts/: populate_permissions.py
tests/: conftest.py  test_books.py  test_loans.py  test_permissions.py  test_policy_group.py  test_policy_group_permissions.py  test_users.py
